updated description for day 2, did some refactoring